# demo_42_ros

./: CMakeLists.txt  README.md  package.xml
configs/RosTx/: Dyn00.42  Inp_IPC.txt  x00.42
configs/VizRx/: Inp_IPC.txt
